Mailing and redis